# ChangeLog for sci-libs/buddy
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/buddy/ChangeLog,v 1.4 2007/02/22 01:18:05 jokey Exp $

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*buddy-2.4 (29 Jan 2006)

  29 Jan 2006; Markus Dittrich <markusle@gentoo.org> +buddy-2.4.ebuild:
  Bump to most recent version. This fixes bug #119582.

*buddy-2.2 (28 Dec 2004)

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +buddy-2.2.ebuild:
  Moved from dev-libs/buddy to sci-libs/buddy.

  28 Aug 2004; David Holm <dholm@gentoo.org> buddy-2.2.ebuild:
  Added to ~ppc.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> buddy-2.2.ebuild:
  virtual/glibc -> virtual/libc

*buddy-2.2 (17 May 2004)

  17 May 2004; Patrick Kursawe <phosphan@gentoo.org> buddy-2.2.ebuild,
  metadata.xml:
  Ebuild by Peter Simons <simons+gentoo@cryp.to> and olivier.fisette@sympatico.ca
  See bug #39396
