@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/buddy/buddy-2.4.ebuild,v 1.1 2006/01/29 06:27:42 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/buddy/buddy-2.4.ebuild,v 1.2 2008/06/03 10:37:38 markusle Exp $
 
 EAPI="prefix"
 
@@ -15,13 +15,8 @@ KEYWORDS="~x86-linux ~ppc-macos"
 IUSE=""
 DEPEND="virtual/libc"
 
-src_compile() {
-	econf || die "econf failed"
-}
-
 src_install() {
-	emake || die "emake failed"
-	make install DESTDIR=${D} || die "make install failed"
+	make install DESTDIR="${D}" || die "make install failed"
 
 	dodoc ChangeLog NEWS AUTHORS README doc/*.txt || \
 		die "failed to install docs"
